# ratzilla

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yml
examples/: Cargo.toml
examples/clipboard/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/demo2/src/: main.rs
examples/hyperlinks/: Cargo.toml  index.html
examples/hyperlinks/src/: main.rs
examples/minimal/src/: main.rs
examples/pong/src/: main.rs
examples/shared/src/: backend.rs
examples/text_area/src/: main.rs
examples/unicode/src/: main.rs
examples/user_input/src/: main.rs
examples/website/src/: main.rs
src/: event.rs  lib.rs  render.rs  utils.rs
src/backend/: canvas.rs  cell_sized.rs  dom.rs  event_callback.rs  mod.rs  ratzilla_canvas.js  selection.rs  utils.rs  webgl2.rs
src/widgets/: hyperlink.rs  hyperlink_state.rs  mod.rs
templates/simple/: Cargo.toml.liquid
templates/simple/.github/workflows/: ci.yml
