[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = { workspace = true, features = ["small_rng"] }
ratzilla.workspace = true
tachyonfx.workspace = true
web-time.workspace = true
examples-shared.workspace = true
console_error_panic_hook.workspace = true
# tui-big-text = "0.6.1"
